add filtragem de variaveis

--- a/m03_v01_store_sales_prediction.ipynb
+++ b/m03_v01_store_sales_prediction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "0c001b34",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "0bda384f",
    "metadata": {},
    "outputs": [],
@@ -352,6 +352,8 @@
        "promo2_since_week                      float64\n",
        "promo2_since_year                      float64\n",
        "promo_interval                          object\n",
+       "mont_map                                object\n",
+       "is_promo                                 int64\n",
        "dtype: object"
       ]
      },
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "id": "383237a0",
    "metadata": {},
    "outputs": [
@@ -444,10 +446,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f76357cf880>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fd6b2a3e160>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -476,21 +478,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "118314d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "state_holiday     4\n",
-       "store_type        4\n",
-       "assortment        3\n",
-       "promo_interval    4\n",
+       "state_holiday      4\n",
+       "store_type         4\n",
+       "assortment         3\n",
+       "promo_interval     4\n",
+       "mont_map          12\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "49eb877d",
    "metadata": {},
    "outputs": [
@@ -511,7 +514,7 @@
        "<Axes: xlabel='assortment', ylabel='sales'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -549,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "ea009f90",
    "metadata": {},
    "outputs": [],
@@ -559,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "d4f99189",
    "metadata": {},
    "outputs": [
@@ -570,7 +573,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "13b56502",
    "metadata": {},
    "outputs": [],
@@ -720,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "825ed2af",
    "metadata": {},
    "outputs": [],
@@ -737,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "db888cbc",
    "metadata": {},
    "outputs": [],
@@ -759,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "5a1eed43",
    "metadata": {},
    "outputs": [
@@ -930,11 +933,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>promo_interval</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>Jan,Apr,Jul,Oct</td>\n",
        "      <td>Jan,Apr,Jul,Oct</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mont_map</th>\n",
+       "      <td>Jul</td>\n",
+       "      <td>Jul</td>\n",
+       "      <td>Jul</td>\n",
+       "      <td>Jul</td>\n",
+       "      <td>Jul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_promo</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>year</th>\n",
@@ -1031,7 +1050,9 @@
        "promo2                                          0                    1   \n",
        "promo2_since_week                              31                   13   \n",
        "promo2_since_year                            2015                 2010   \n",
-       "promo_interval                                NaN      Jan,Apr,Jul,Oct   \n",
+       "promo_interval                                  0      Jan,Apr,Jul,Oct   \n",
+       "mont_map                                      Jul                  Jul   \n",
+       "is_promo                                        0                    1   \n",
        "year                                         2015                 2015   \n",
        "month                                           7                    7   \n",
        "day                                            31                   31   \n",
@@ -1060,7 +1081,9 @@
        "promo2                                          1                    0   \n",
        "promo2_since_week                              14                   31   \n",
        "promo2_since_year                            2011                 2015   \n",
-       "promo_interval                    Jan,Apr,Jul,Oct                  NaN   \n",
+       "promo_interval                    Jan,Apr,Jul,Oct                    0   \n",
+       "mont_map                                      Jul                  Jul   \n",
+       "is_promo                                        1                    0   \n",
        "year                                         2015                 2015   \n",
        "month                                           7                    7   \n",
        "day                                            31                   31   \n",
@@ -1089,7 +1112,9 @@
        "promo2                                          0  \n",
        "promo2_since_week                              31  \n",
        "promo2_since_year                            2015  \n",
-       "promo_interval                                NaN  \n",
+       "promo_interval                                  0  \n",
+       "mont_map                                      Jul  \n",
+       "is_promo                                        0  \n",
        "year                                         2015  \n",
        "month                                           7  \n",
        "day                                            31  \n",
@@ -1101,13 +1126,267 @@
        "promo_time_week                                 0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df2.head().T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "563a9234",
+   "metadata": {},
+   "source": [
+    "## PASSO 03 - FILTRAGEM DE VARIÁVEIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f64ca532",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df2.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb7da0d7",
+   "metadata": {},
+   "source": [
+    "### 3.1 Filtragem das Linhas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7fa9d46c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df3[(df3['open']!=0) & (df3['sales']>0)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98a8aacf",
+   "metadata": {},
+   "source": [
+    "### 3.2 Seleção das Colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0d9013ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_drop = ['customers', 'open', 'promo_interval', 'mont_map']\n",
+    "df3 = df3.drop(cols_drop, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ef8b8202",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>store</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day_of_week</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <td>2015-07-31 00:00:00</td>\n",
+       "      <td>2015-07-31 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sales</th>\n",
+       "      <td>5263</td>\n",
+       "      <td>6064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>promo</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state_holiday</th>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>regular_day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_holiday</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>store_type</th>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>assortment</th>\n",
+       "      <td>basic</td>\n",
+       "      <td>basic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>competition_distance</th>\n",
+       "      <td>1270.0</td>\n",
+       "      <td>570.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>competition_open_since_month</th>\n",
+       "      <td>9</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>competition_open_since_year</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>promo2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>promo2_since_week</th>\n",
+       "      <td>31</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>promo2_since_year</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_promo</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day</th>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>week_of_year</th>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year_week</th>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2015-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>competition_since</th>\n",
+       "      <td>2008-09-01 00:00:00</td>\n",
+       "      <td>2007-11-01 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>competition_time_month</th>\n",
+       "      <td>84</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>promo_since</th>\n",
+       "      <td>2015-07-27 00:00:00</td>\n",
+       "      <td>2010-03-22 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>promo_time_week</th>\n",
+       "      <td>0</td>\n",
+       "      <td>279</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                0                    1\n",
+       "store                                           1                    2\n",
+       "day_of_week                                     5                    5\n",
+       "date                          2015-07-31 00:00:00  2015-07-31 00:00:00\n",
+       "sales                                        5263                 6064\n",
+       "promo                                           1                    1\n",
+       "state_holiday                         regular_day          regular_day\n",
+       "school_holiday                                  1                    1\n",
+       "store_type                                      c                    a\n",
+       "assortment                                  basic                basic\n",
+       "competition_distance                       1270.0                570.0\n",
+       "competition_open_since_month                    9                   11\n",
+       "competition_open_since_year                  2008                 2007\n",
+       "promo2                                          0                    1\n",
+       "promo2_since_week                              31                   13\n",
+       "promo2_since_year                            2015                 2010\n",
+       "is_promo                                        0                    1\n",
+       "year                                         2015                 2015\n",
+       "month                                           7                    7\n",
+       "day                                            31                   31\n",
+       "week_of_year                                   31                   31\n",
+       "year_week                                 2015-30              2015-30\n",
+       "competition_since             2008-09-01 00:00:00  2007-11-01 00:00:00\n",
+       "competition_time_month                         84                   94\n",
+       "promo_since                   2015-07-27 00:00:00  2010-03-22 00:00:00\n",
+       "promo_time_week                                 0                  279"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.head(2).T"
    ]
   }
  ],
