Data Description and Feature Engineering modified

--- a/m03_v01_store_sales_prediction.ipynb
+++ b/m03_v01_store_sales_prediction.ipynb
@@ -446,7 +446,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fd6b2a3e160>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f319ca7d370>"
       ]
      },
      "execution_count": 16,
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "5a1eed43",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1126,7 @@
        "promo_time_week                                 0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "f64ca532",
    "metadata": {},
    "outputs": [],
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "7fa9d46c",
    "metadata": {},
    "outputs": [],
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "0d9013ce",
    "metadata": {},
    "outputs": [],
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "ef8b8202",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1380,7 @@
        "promo_time_week                                 0                  279"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
